--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.10",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.3",
+    "mongoose-unique-validator": "^2.0.1",
     "validator": "^10.4.0"
   },
   "devDependencies": {
